feat: add api routes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/haywhyze/node-db-challenge#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^3.19.0",
     "knex": "^0.19.0",
     "sqlite3": "^4.0.9"
   },
